src/css/gallery.css
@reference './index.css';

.yarl__slide {
    @apply p-0;
}

/* Allow images that are smaller than the screen to scale up */
/* Should probably make multiple thumbnail sizes instead and use srcSet */
.yarl__slide > .yarl__slide_image {
    transition-property: height, max-height, width, max-width;
    transition-duration: 800ms;
    @apply max-h-full! max-w-full! h-screen w-screen;
}

/* Bottom navigation thumbnails */
button.yarl__thumbnails_thumbnail {
    & > img {
        @apply photo-thumbnail size-full;
    }
}

/* Only show close button on mobile, everything on desktop */
.yarl__button[title='Zoom in'],
.yarl__button[title='Zoom out'],
.yarl__button[title='Hide captions'] {
    @apply hidden md:block;
}

/* Slideshow progress animation */
.slideshow_progress_bar {
    content: "";
    position: absolute;
    top: 0; left: 0;
    width: 100%;
    height: 4px;
    background-color: var(--color-accent);
    transform-origin: left center;
    transition: transform 0s linear;
    animation: slideshow_progress_bar var(--slideshow-delay) linear forwards;
}

@keyframes slideshow_progress_bar {
    from {
        transform: scaleX(0);
    }
    to {
        transform: scaleX(1);
    }
}

/* Shrink thumbnail height to 0 when slideshow starts */
.yarl__thumbnails_container {
    transition-property: max-height, padding;
    transition-duration: 250ms;
    transition-timing-function: linear;
    /* Matches default height */
    max-height: calc(var(--yarl__thumbnails_thumbnail_height) + 32px);
    padding: 16px;

    /* Shrink when class added to yarl root */
    .slideshow-running & {
        max-height: 0px;
        padding: 0px;
    }
}

